# c

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  function_tasks.py  main.py  pyproject.toml  task.py
